--- a/static/index.html
+++ b/static/index.html
@@ -4,35 +4,47 @@
 <head>
   <title>Static Asset</title>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-  <script src="/socket.io/socket.io.js"></script>  
+  <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
-  <div id='v-app'>
-    <h1>{{ title }}</h1>
-    <form>
-      <input v-model="text" type="text" name="message" id="message">
-      <button type="submit" @click.prevent="sendMessage()">Send</button>
-    </form>
-    <p>
-    <ul>
-      <li v-for="msg of messages">{{ msg }}</li>
-    </ul>
-    </p>
-  </div>
+  <main id='v-app'>
+    <section class="alerts">
+
+    </section>
+    <section class="chat">
+      <h1>Websocket Testing</h1>
+      <form>
+        <input v-model="text" type="text" name="message" id="message">
+        <button type="submit" @click.prevent="sendMessage()">Send</button>
+      </form>
+      <p>
+      <ul>
+        <li v-for="msg of messages">
+          <strong>{{ msg.sender }}:</strong> {{ msg.message }}
+        </li>
+      </ul>
+      </p>
+    </section>
+  </main>
 </body>
 <script>
   let app = new Vue({
     el: '#v-app',
     data: {
-      title: 'Websockets Testing',
+      username: '',
       text: '',
-      messages: ['Some message', 'Another message'],
-      socket: null,
+      messages: [],
+      socket: { chat: null, alert: null, },
     },
     methods: {
       sendMessage() {
-        this.socket.emit('messageFromClient', this.text);
+        const chatToServerPayload = {
+          sender: this.username,
+          message: this.text,
+        }
+
+        this.socket.chat.emit('chatToServer', chatToServerPayload);
         this.text = '';
       },
       receiveMessage(msg) {
@@ -41,8 +53,10 @@
       }
     },
     created() {
-      this.socket = io('http://localhost:3000');
-      this.socket.on('messageFromServer', (msg) => this.receiveMessage(msg))
+      this.username = prompt('Enter your username');
+
+      this.socket.chat = io('http://localhost:3000/chat');
+      this.socket.chat.on('chatToClient', (msg) => this.receiveMessage(msg))
     }
   })
 </script>
